--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "sharp": "^0.33.4",
@@ -45,6 +47,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
