--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/themes": "^3.1.3",
     "@shadcn/ui": "^0.0.4",
     "@types/react-select": "^5.0.1",
+    "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
