--- a/package.json
+++ b/package.json
@@ -20,17 +20,23 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/themes": "^3.1.3",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "@shadcn/ui": "^0.0.4",
     "@types/react-select": "^5.0.1",
-    "axios": "^1.7.6",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.8",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "next-cloudinary": "^6.6.2",
+    "next-redux-wrapper": "^8.1.0",
+    "nookies": "^2.5.2",
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -38,6 +44,7 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "sharp": "^0.33.4",
@@ -48,6 +55,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.276",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
